View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027991 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-10-22 18:23 | 2018-04-24 11:52 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 6.3.1 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027991: Modeling Algorithms - BRepGProp_Face crashes on face without geometric surface | ||||
Description | It is suggested that BRepGProp_Face will handle faces without geometric surface smoothly - at least without a crash. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION restore [locate_data_file bug27821_nullsurf.brep] s sprops s Result: An exception was caught 0000000005835120 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000000 during 'READ' operation ** Exception ** 0000000005835120 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000000 during 'READ' operation | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug27821 | ||||
related to | 0027821 | closed | bugmaster | Visualization, AIS_Shape - add NULL checks for displaying TopoDS_Face with NULL surface |
related to | 0027992 | closed | apn | Modeling Algorithms - Extrema_ExtPS crashes on face without geometric surface |
related to | 0028125 | new | Modeling Algorithms - support of BRep shapes based on tessellated geometry | |
related to | 0029524 | closed | bugmaster | Modeling Algorithms - access violation in HLRBRep_PolyAlgo while computing HLR for triangulation-only surface |
|
Branch CR27991 has been created by kgv. SHA-1: 6630a31f52ff8ce21ad3be148b86515769d4a255 Detailed log of new commits: Author: kgv Date: Sat Oct 22 18:37:51 2016 +0300 0027991: Modeling Algorithms - BRepGProp_Face crashes on face without geometric surface |
|
The workaround fixing the crash has been pushed to the branch. Note that the shape contains triangulation - thus some surface properties like area can be actually computed from it. |
|
Branch CR27991 has been updated forcibly by kgv. SHA-1: 738f2ecf6316d7947d039d78351b76d3d578edaa |
|
No remarks to implementation. But please describe in commit message what you have done, because you fixed two other places not connected directly with gprops calculation. |
|
Also, create a test case. |
|
Branch CR27991 has been updated forcibly by kgv. SHA-1: 6cfe5e6412f18fa4d2ac6c2b326f526a8007f044 |
|
Commit message has been updated. Test case bugs/vis/bug27821 has been extended to check this issue as well. |
|
Branch CR27991 has been updated forcibly by msv. SHA-1: 9d9e9239aa2ec6d858bbca4d415102ac9c0412ad |
|
Commit message has been updated. |
|
Reviewed. |
|
Dear BugMaster, Branch CR27991 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 9d9e9239aa2ec6d858bbca4d415102ac9c0412ad Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 Windows: 0 MacOS: 1167 Regressions/Differences: http://occt-tests/CR27991-master-OCCT/Debian70-64/summary.html http://occt-tests/CR27991-master-OCCT/Windows-64-VC10/summary.html prj base C5, C6 Testing cases: bugs vis bug27821 - OK http://occt-tests/CR27991-master-OCCT/Debian70-64/bugs/vis/bug27821.html http://occt-tests/CR27991-master-OCCT/Windows-64-VC10/bugs/vis/bug27821.html Testing on Linux: Total MEMORY difference: 89935820 / 90328255 [-0.43%] Total CPU difference: 19489.399999999965 / 19231.589999999847 [+1.34%] Testing on Windows: Total MEMORY difference: 57288337 / 57220230 [+0.12%] Total CPU difference: 17906.434384098717 / 18211.026336598778 [-1.67%] There is difference in images found by testdiff: http://occt-tests/CR27991-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27991-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html bugs modalg_2 bug472_3 |
|
Dear Kirill, Branch CR27991 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Branch CR27991 has been updated by kgv. SHA-1: 3e80a0b142be8ce119685d9df71f437b9d71ba40 Detailed log of new commits: Author: kgv Date: Wed Oct 26 22:03:42 2016 +0300 fix regression |
|
Branch CR27991_1 has been created by kgv. SHA-1: 85103e140443d6adbe3e1d7ace47ad0f7d74fe30 Detailed log of new commits: Author: kgv Date: Sat Oct 22 18:37:51 2016 +0300 0027991: Modeling Algorithms - BRepGProp_Face crashes on face without geometric surface BRepGProps now ignores faces without geometric surface to avoid access violation. BRepExtrema_DistShapeShape::DistanceMapMap() now skips comparison between void bounding boxes. BRepBndLib::Add() now ignores useTriangulation flag for faces without geometric surfaces, and uses triangulation if any for updating of the box. |
|
Please check updated patch. |
|
Branch CR27991_1 has been updated forcibly by apv. SHA-1: 4d19a2c5e73415f81c1e3cae34bdd0fe1ddd0b66 |
|
Branch CR27991_1 has been rebased on the current master |
|
Dear BugMaster, Branch CR27991_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 4d19a2c5e73415f81c1e3cae34bdd0fe1ddd0b66 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 Windows: 0 MacOS: 1149 Regressions/Differences: Not detected Testing cases: bugs vis bug27821 - OK http://occt-tests/CR27991_1-master-OCCT/Debian70-64/bugs/vis/bug27821.html http://occt-tests/CR27991_1-master-OCCT/Windows-64-VC10/bugs/vis/bug27821.html Testing on Linux: Total MEMORY difference: 91250103 / 90744466 [+0.56%] Total CPU difference: 19325.789999999834 / 19313.189999999897 [+0.07%] Testing on Windows: Total MEMORY difference: 57304054 / 57321116 [-0.03%] Total CPU difference: 17981.970068298648 / 18220.18359529866 [-1.31%] |
|
Branch CR27991 has been deleted by kgv. SHA-1: 3e80a0b142be8ce119685d9df71f437b9d71ba40 |
|
Branch CR27991_1 has been deleted by kgv. SHA-1: 4d19a2c5e73415f81c1e3cae34bdd0fe1ddd0b66 |
occt: master 4d19a2c5 2016-10-22 15:37:51 Committer: |
0027991: Modeling Algorithms - BRepGProp_Face crashes on face without geometric surface BRepGProps now ignores faces without geometric surface to avoid access violation. BRepExtrema_DistShapeShape::DistanceMapMap() now skips comparison between void bounding boxes. BRepBndLib::Add() now ignores useTriangulation flag for faces without geometric surfaces, and uses triangulation if any for updating of the box. |
Affected Issues 0027991 |
|
mod - src/BRepBndLib/BRepBndLib.cxx | Diff File | ||
mod - src/BRepExtrema/BRepExtrema_DistShapeShape.cxx | Diff File | ||
mod - src/BRepGProp/BRepGProp.cxx | Diff File | ||
mod - tests/bugs/vis/bug27821 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-10-22 18:23 | kgv | New Issue | |
2016-10-22 18:23 | kgv | Assigned To | => msv |
2016-10-22 18:23 | kgv | Relationship added | related to 0027821 |
2016-10-22 18:27 | kgv | Steps to Reproduce Updated | |
2016-10-22 18:37 | kgv | Summary | Modeling Algorithms - BRepGProp_Face is crashing on face without geometric surface => Modeling Algorithms - BRepGProp_Face crashes on face without geometric surface |
2016-10-22 18:38 | git | Note Added: 0058981 | |
2016-10-22 18:41 | kgv | Product Version | 7.0.0 => 6.3.1 |
2016-10-22 18:43 | kgv | Note Added: 0058982 | |
2016-10-22 18:43 | kgv | Status | new => resolved |
2016-10-22 18:43 | kgv | Note Edited: 0058982 | |
2016-10-22 19:24 | git | Note Added: 0058983 | |
2016-10-22 19:25 | kgv | Relationship added | related to 0027992 |
2016-10-24 10:17 |
|
Note Added: 0058991 | |
2016-10-24 10:17 |
|
Assigned To | msv => kgv |
2016-10-24 10:17 |
|
Status | resolved => assigned |
2016-10-24 10:17 |
|
Note Added: 0058992 | |
2016-10-24 16:11 | git | Note Added: 0059030 | |
2016-10-24 16:12 | kgv | Note Added: 0059031 | |
2016-10-24 16:12 | kgv | Assigned To | kgv => msv |
2016-10-24 16:12 | kgv | Status | assigned => resolved |
2016-10-24 18:24 | git | Note Added: 0059040 | |
2016-10-24 18:25 |
|
Note Added: 0059041 | |
2016-10-24 18:25 |
|
Note Added: 0059042 | |
2016-10-24 18:25 |
|
Assigned To | msv => bugmaster |
2016-10-24 18:25 |
|
Status | resolved => reviewed |
2016-10-24 18:56 |
|
Assigned To | bugmaster => apv |
2016-10-26 13:37 |
|
Test case number | => bugs vis bug27821 |
2016-10-26 14:11 |
|
Note Added: 0059165 | |
2016-10-26 14:11 |
|
Assigned To | apv => kgv |
2016-10-26 14:11 |
|
Status | reviewed => assigned |
2016-10-26 14:11 |
|
Note Edited: 0059165 | |
2016-10-26 14:13 |
|
Note Added: 0059166 | |
2016-10-26 22:03 | git | Note Added: 0059217 | |
2016-10-26 22:07 | git | Note Added: 0059218 | |
2016-10-26 22:07 | kgv | Note Added: 0059219 | |
2016-10-26 22:07 | kgv | Assigned To | kgv => bugmaster |
2016-10-26 22:07 | kgv | Status | assigned => resolved |
2016-10-26 22:08 | kgv | Status | resolved => reviewed |
2016-10-27 09:55 |
|
Assigned To | bugmaster => apv |
2016-10-28 17:27 | git | Note Added: 0059367 | |
2016-10-28 17:27 |
|
Note Added: 0059368 | |
2016-10-31 15:32 |
|
Note Added: 0059638 | |
2016-10-31 15:32 |
|
Assigned To | apv => bugmaster |
2016-10-31 15:32 |
|
Status | reviewed => tested |
2016-10-31 15:33 |
|
Note Edited: 0059638 | |
2016-11-03 17:10 |
|
Changeset attached | => occt master 4d19a2c5 |
2016-11-03 17:10 |
|
Assigned To | bugmaster => apv |
2016-11-03 17:10 |
|
Status | tested => verified |
2016-11-03 17:10 |
|
Resolution | open => fixed |
2016-11-17 17:22 |
|
Relationship added | related to 0028125 |
2016-12-07 11:25 | git | Note Added: 0061216 | |
2016-12-07 11:25 | git | Note Added: 0061217 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |
2018-04-24 11:52 | kgv | Relationship added | related to 0029524 |